--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的第一个网站</title>
+    <title>zzk的百宝箱</title>
 </head>
-
 <body>
-    <h3>欢迎来到zzk的百宝箱</h3>
+    <h1 style="color:green">欢迎来到zzk的百宝箱</h1>
+    <h3>查看代码</h3>
+    <img src="D:\24vscode\image\头像.jpg" alt="头像">
 </body>
 
 </html>
